Bug 1199573: [MSE] Properly handle partial media header received prior a discontinuity. r=gerald a=sledru